--- a/cleaned.css
+++ b/cleaned.css
@@ -297,7 +297,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     }
        h1.style1 a:hover, h2.style1 a:hover, h3.style1 a:hover, p.style1 a:hover, .contentpagetext a:hover{
     text-decoration: none
-    }.navbartext a:hover{
+    }.navbartext a:hover, .description a:hover{
 color: #f5212b;
 } .navbartext span.p:nth-child(n + 2), h1.style1 span.p:nth-child(n + 2), h2.style1 span.p:nth-child(n + 2), h3.style1 span.p:nth-child(n + 2), p.style1 span.p:nth-child(n + 2){
     margin-top: 1rem
